# health-wellness-agents-openai

./: .env.example  .gitignore  README.md  pyproject.toml
.windsurf/rules/: openai-agents-sdk.md
db/: health_assistant.db
scripts/: init_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  affirmation_agent.py  general_query_agent.py  greeter_agent.py  health_monitor_agent.py  planner_agent.py  router_agent.py  session.py  wellbeing_agent.py
src/ai_agents/: __init__.py  affirmation_agent.py  flow_manager.py  general_query_agent.py  greeter_agent.py  health_monitor_agent.py  planner_agent.py  router_agent.py  session.py  wellbeing_agent.py
src/db/: __init__.py  config.py  crud.py  database.py  init_db.py  models.py  schemas.py
src/tools/: __init__.py  conversation.py  health.py  meal_planning.py  user.py  utils.py  wellbeing.py
